apollo-federation/tests/composition/snapshots/main__composition__connectors__tests__composes_v0_3-2.snap
---
source: apollo-federation/tests/composition/connectors.rs
expression: api_schema_string
---
type Query {
  widgets: [Widget!]!
  widget(id: ID!): Widget
  resources: [Resource!]!
  resource(id: ID!): Resource
}

type Widget {
  id: ID!
  name: String!
}

type Resource {
  id: ID!
  name: String!
}
