apollo-federation/tests/composition/snapshots/main__composition__connectors__tests__composes_v0_3.snap
---
source: apollo-federation/tests/composition/connectors.rs
expression: schema_string
---
schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.6", for: EXECUTION) @link(url: "https://specs.apollo.dev/connect/v0.4", for: EXECUTION) @join__directive(name: "link", graphs: [WITH_CONNECTORS_V0_1_], args: {url: "https://specs.apollo.dev/connect/v0.2", import: ["@connect", "@source"]}) @join__directive(name: "link", graphs: [WITH_CONNECTORS_V0_3_], args: {url: "https://specs.apollo.dev/connect/v0.3", import: ["@connect", "@source"]}) @join__directive(name: "source", graphs: [WITH_CONNECTORS_V0_1_], args: {name: "v1", http: {baseURL: "http://v1"}}) @join__directive(name: "source", graphs: [WITH_CONNECTORS_V0_3_], args: {name: "v1", http: {baseURL: "http://v1", path: "$(['v1'])", queryParams: "$({ locale: 'en' })"}, errors: {message: "error.message", extensions: "code: error.code"}, isSuccess: "$status->eq(200)"}) {
  query: Query
}

directive @link(url: String, as: String, for: link__Purpose, import: [link__Import]) repeatable on SCHEMA

directive @join__graph(name: String!, url: String!, internalDefinitions: String) on ENUM_VALUE

directive @join__type(graph: join__Graph!, key: join__FieldSet, extension: Boolean! = false, resolvable: Boolean! = true, isInterfaceObject: Boolean! = false) repeatable on OBJECT | INTERFACE | UNION | ENUM | INPUT_OBJECT | SCALAR

directive @join__field(graph: join__Graph, requires: join__FieldSet, provides: join__FieldSet, type: String, external: Boolean, override: String, usedOverridden: Boolean, overrideLabel: String, contextArguments: [join__ContextArgument!], lookup: Boolean, isArguments: [join__IsArgument!], requireArguments: [join__RequireArgument!]) repeatable on FIELD_DEFINITION | INPUT_FIELD_DEFINITION

directive @join__implements(graph: join__Graph!, interface: String!) repeatable on OBJECT | INTERFACE

directive @join__unionMember(graph: join__Graph!, member: String!) repeatable on UNION

directive @join__enumValue(graph: join__Graph!) repeatable on ENUM_VALUE

directive @join__directive(graphs: [join__Graph!], name: String!, args: join__DirectiveArguments) repeatable on SCHEMA | OBJECT | INTERFACE | FIELD_DEFINITION

enum link__Purpose {
  """
  `SECURITY` features provide metadata necessary to securely resolve fields.
  """
  SECURITY
  """
  `EXECUTION` features provide metadata necessary for operation execution.
  """
  EXECUTION
}

scalar link__Import

enum join__Graph {
  WITH_CONNECTORS_V0_1_ @join__graph(name: "with-connectors-v0_1", url: "http://with-connectors-v0_1")
  WITH_CONNECTORS_V0_3_ @join__graph(name: "with-connectors-v0_3", url: "http://with-connectors-v0_3")
}

scalar join__FieldSet

scalar join__DirectiveArguments

scalar join__FieldValue

input join__ContextArgument {
  name: String!
  type: String!
  context: String!
  selection: join__FieldValue!
}

scalar join__FieldSelectionMap

input join__IsArgument {
  name: String!
  selection: join__FieldSelectionMap!
}

input join__RequireArgument {
  name: String!
  type: String!
  selection: join__FieldSelectionMap!
}

type Query @join__type(graph: WITH_CONNECTORS_V0_1_) @join__type(graph: WITH_CONNECTORS_V0_3_) {
  widgets: [Widget!]! @join__field(graph: WITH_CONNECTORS_V0_1_) @join__directive(name: "connect", graphs: [WITH_CONNECTORS_V0_1_], args: {source: "v1", http: {GET: "/widgets"}, selection: "id name"})
  widget(id: ID!): Widget @join__field(graph: WITH_CONNECTORS_V0_1_) @join__directive(name: "connect", graphs: [WITH_CONNECTORS_V0_1_], args: {source: "v1", http: {GET: "/widgets/{$args.id}"}, selection: "id name", entity: true})
  resources: [Resource!]! @join__field(graph: WITH_CONNECTORS_V0_3_) @join__directive(name: "connect", graphs: [WITH_CONNECTORS_V0_3_], args: {source: "v1", http: {GET: "/resources"}, selection: "id name"})
  resource(id: ID!): Resource @join__field(graph: WITH_CONNECTORS_V0_3_) @join__directive(name: "connect", graphs: [WITH_CONNECTORS_V0_3_], args: {source: "v1", http: {GET: "/resources/{$args.id}"}, selection: "id name", entity: true})
}

type Widget @join__type(graph: WITH_CONNECTORS_V0_1_, key: "id") {
  id: ID!
  name: String!
}

type Resource @join__type(graph: WITH_CONNECTORS_V0_3_, key: "id") @join__directive(name: "connect", graphs: [WITH_CONNECTORS_V0_3_], args: {id: "conn_id", source: "v1", http: {GET: "/resources", path: "$(['v1'])", queryParams: "$({ locale: 'en' })"}, batch: {maxSize: 5}, errors: {message: "error.message", extensions: "code: error.code"}, isSuccess: "$status->eq(200)", selection: "id name"}) {
  id: ID!
  name: String!
}
