apollo-federation/tests/composition/snapshots/main__composition__connectors__tests__composes_v0_4-2.snap
---
source: apollo-federation/tests/composition/connectors.rs
expression: api_schema_string
---
type Query {
  resources: [Resource!]!
  resource(id: ID!): Resource
  widgets: [Widget!]!
  widget(id: ID!): Widget
}

type Resource {
  id: ID!
  name: String!
}

type Widget {
  id: ID!
  name: String!
}
