apollo-federation/tests/composition/snapshots/main__composition__connectors__tests__composes_with_renames.snap
---
source: apollo-federation/tests/composition/connectors.rs
expression: schema_string
---
schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.6", for: EXECUTION) @link(url: "https://specs.apollo.dev/connect/v0.4", for: EXECUTION) @join__directive(name: "link", graphs: [WITH_CONNECTORS], args: {url: "https://specs.apollo.dev/connect/v0.2", as: "http", import: [{name: "@connect", as: "@http"}, {name: "@source", as: "@api"}]}) @join__directive(name: "api", graphs: [WITH_CONNECTORS], args: {name: "v1", http: {baseURL: "http://v1"}}) {
  query: Query
}

directive @link(url: String, as: String, for: link__Purpose, import: [link__Import]) repeatable on SCHEMA

directive @join__graph(name: String!, url: String!) on ENUM_VALUE

directive @join__type(graph: join__Graph!, key: join__FieldSet, extension: Boolean! = false, resolvable: Boolean! = true, isInterfaceObject: Boolean! = false) repeatable on OBJECT | INTERFACE | UNION | ENUM | INPUT_OBJECT | SCALAR

directive @join__field(graph: join__Graph, requires: join__FieldSet, provides: join__FieldSet, type: String, external: Boolean, override: String, usedOverridden: Boolean, overrideLabel: String, contextArguments: [join__ContextArgument!]) repeatable on FIELD_DEFINITION | INPUT_FIELD_DEFINITION

directive @join__implements(graph: join__Graph!, interface: String!) repeatable on OBJECT | INTERFACE

directive @join__unionMember(graph: join__Graph!, member: String!) repeatable on UNION

directive @join__enumValue(graph: join__Graph!) repeatable on ENUM_VALUE

directive @join__directive(graphs: [join__Graph!], name: String!, args: join__DirectiveArguments) repeatable on SCHEMA | OBJECT | INTERFACE | FIELD_DEFINITION

enum link__Purpose {
  """
  `SECURITY` features provide metadata necessary to securely resolve fields.
  """
  SECURITY
  """
  `EXECUTION` features provide metadata necessary for operation execution.
  """
  EXECUTION
}

scalar link__Import

enum join__Graph {
  WITH_CONNECTORS @join__graph(name: "with-connectors", url: "http://with-connectors")
}

scalar join__FieldSet

scalar join__DirectiveArguments

scalar join__FieldValue

input join__ContextArgument {
  name: String!
  type: String!
  context: String!
  selection: join__FieldValue!
}

type Query @join__type(graph: WITH_CONNECTORS) {
  resources: [Resource!]! @join__directive(name: "http", graphs: [WITH_CONNECTORS], args: {source: "v1", http: {GET: "/resources"}, selection: "id name"})
  resource(id: ID!): Resource @join__directive(name: "http", graphs: [WITH_CONNECTORS], args: {source: "v1", http: {GET: "/resources/{$args.id}"}, selection: "id name", entity: true})
}

type Resource @join__type(graph: WITH_CONNECTORS, key: "id") {
  id: ID!
  name: String!
}
